--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,6 +2,8 @@
 name = "cli-updates"
 version = "0.1.0"
 edition = "2021"
+authors = ["Kelvin Maccarthy <kelvinmac7@outlook.com>"]
+description = "A simple CLI"
 
 [dependencies]
 ansi_term = "0.12.1"
